<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023. Alwin Ibba
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="label_dialog_suspension_interval_add">Add suspension interval</string>
    <string name="text_dialog_suspension_interval_add_start">Start</string>
    <string name="text_dialog_suspension_interval_add_end">End</string>
    <string name="label_dialog_suspension_interval_add_ok">@android:string/ok</string>
    <string name="label_dialog_suspension_interval_add_cancel">@android:string/cancel</string>
</resources>